--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Random Site</title>
+  </head>
+  <body>
+ <header>
+   <nav>
+     <ul>
+       <li>Home</li>
+       <li>About</li>
+     </ul>
+   </nav>
+   <h3>Random Site</h3>
+ </header>   
+  </body>
+</html>
