--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+  <head><title>title</title></head>
+  
+  <body>
+    <header><h3>hopes page</h3><nav>
+    <ul>
+      <li>pages</li>
+      <li>test</li>
+    </ul></nav></header>
+  </body>
+  
+  
+  
+</html>
